--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 15 13:17:57 CET 2023
-sdk.dir=C\:\\Users\\tabat\\AppData\\Local\\Android\\Sdk
+#Wed Nov 29 13:07:38 CET 2023
+sdk.dir=C\:\\Users\\SergioPalomoGarcia\\AppData\\Local\\Android\\Sdk
